--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       {
         "provider": "github",
         "owner": "muno1623",
-        "repo": "lumiov"
+        "repo": "lumiov-releases"
       }
     ],
     "win": {
