--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
         env:
           CI: false
         run: |
-          CI=false npm run build:frontend
-          CI=false npm run build:backend
+          npm run build:frontend
+          npm run build:backend
 
       - name: Publish Electron App
         env:
