--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "package": "npm run build && electron-builder",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
-    "preversion": "npm run build",
-    "postversion": "git push && git push origin --tags"
+    "release": "standard-version",
+    "release:dry-run": "standard-version --dry-run",
+    "prepare": "husky install",
+    "commitlint": "commitlint --edit"
   },
   "build": {
     "appId": "com.lumiov.app",
@@ -60,9 +62,13 @@
     }
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "concurrently": "^8.2.0",
     "electron": "^34.0.0",
     "electron-builder": "^24.9.0",
+    "husky": "^9.0.0",
+    "standard-version": "^9.5.0",
     "typescript": "^5.3.0",
     "wait-on": "^7.2.0",
     "rimraf": "^5.0.0"
