--- a/electron/.gitignore
+++ b/electron/.gitignore
@@ -4,12 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
+/release
+/dist
 
 # testing
 /coverage
 
 # production
-/dist
+/build
 
 # misc
 .DS_Store
@@ -21,3 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+./lumiov_dev.pfx
+
+commands.txt
