--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lumiov",
   "version": "1.1.0",
   "description": "Lumiov Kubernetes Manager",
-  "main": "dist/electron/main.js",
+  "main": "electron/dist/electron/main.js",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\" \"npm run dev:electron\"",
@@ -34,7 +34,7 @@
       "target": [
         "nsis"
       ],
-      "certificateFile": "lumiov_dev.pfx"
+      "cscLink": "lumiov_dev.pfx"
     },
     "nsis": {
       "oneClick": false,
@@ -43,8 +43,8 @@
       "deleteAppDataOnUninstall": true
     },
     "files": [
-      "dist/electron/**/*",
-      "frontend/build/**/*",
+      "electron/dist/electron/**/*",
+      "frontend/dist/**/*",
       "package.json"
     ],
     "extraResources": [
