--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "lib": ["ESNext", "DOM"],
-    "outDir": "./dist/electron",
+    "outDir": "./electron/dist/electron",
     "rootDir": "./electron",
     "strict": true,
     "esModuleInterop": true,
