fix: Backend launcher path fixed and build pipeline updated

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:frontend": "cd frontend && npm start",
     "dev:backend": "cd backend && npm run dev",
     "dev:electron": "wait-on http://localhost:3000 && tsc -p tsconfig.json && electron .",
+    "electron": "npm run build &&tsc -p tsconfig.json && electron .",
     "clean": "rimraf dist release",
     "build": "npm run build:frontend && npm run build:backend && tsc -p tsconfig.json",
     "package": "npm run build && electron-builder",
