--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,12 +77,12 @@ jobs:
 
       # Create GitHub Release with changelog
       - name: Create GitHub Release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.version.outputs.tag }}
-          release_name: Release ${{ steps.version.outputs.tag }}
+          name: Release ${{ steps.version.outputs.tag }}
           body_path: CHANGELOG.md
           draft: false
           prerelease: false
