--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "muno1623",
+        "owner": "mtayabnoor",
         "repo": "lumiov-releases",
         "releaseType": "release"
       }
