--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,14 @@
     "@kubernetes/client-node": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "tslib": "^2.8.1",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "@types/ws": "^8.18.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
