--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
+    "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
     "typescript": "^5.9.3",
     "web-vitals": "^2.1.4",
