--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lumiov",
-  "version": "2.0.4",
+  "version": "2.0.7",
   "description": "Lumiov Kubernetes Manager",
   "main": "electron/dist/electron/main.js",
   "type": "module",
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
+    "@types/node": "25.2.0",
     "concurrently": "^8.2.0",
     "electron": "40.1.0",
     "electron-builder": "26.7.0",
