feat: Implement  k8s resource monitoring dashboard with overview pages, charts, and resource tables

--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
         "owner": "mtayabnoor",
         "repo": "lumiov-releases",
         "releaseType": "release"
+      },
+      {
+        "provider": "github",
+        "owner": "mtayabnoor",
+        "repo": "lumiov",
+        "releaseType": "release"
       }
     ],
     "win": {
