--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
+    "@types/react-window": "^1.8.8",
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/xterm": "^6.0.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0",
+    "react-window": "^2.2.6",
     "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
     "typescript": "^5.9.3",
