--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "eslintConfig": {
@@ -52,9 +53,16 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^25.2.0",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.1.2",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.5.0",
+    "globals": "^17.3.0",
+    "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1",
     "vite-tsconfig-paths": "^6.0.5"
   }
