fix: Updated main layout styles

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
       "target": [
         "nsis"
       ],
+      "icon": "public/lumiov.ico",
       "cscLink": "lumiov_dev.pfx"
     },
     "nsis": {
