--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/ws": "^8.18.1",
+    "@vercel/ncc": "^0.38.4",
     "eslint": "^9.39.2",
     "globals": "^17.3.0",
     "tsx": "^4.19.2",
