fix: Icon name fix in package.json

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "target": [
         "nsis"
       ],
-      "icon": "frontend/public/icon.ico",
+      "icon": "frontend/public/lumiov.ico",
       "cscLink": "lumiov_dev.pfx"
     },
     "nsis": {
