--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,17 @@
   },
   "dependencies": {
     "@kubernetes/client-node": "^1.0.1",
+    "cors": "^2.8.6",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fast-deep-equal": "^3.1.3",
     "socket.io": "^4.8.3",
     "tslib": "^2.8.1",
     "ws": "^8.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/ws": "^8.18.1",
