--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@kubernetes/client-node": "^1.0.1",
+    "@langchain/core": "^1.1.19",
+    "@langchain/openai": "^1.2.5",
     "cors": "^2.8.6",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fast-deep-equal": "^3.1.3",
+    "langchain": "^1.2.18",
     "socket.io": "^4.8.3",
     "tslib": "^2.8.1",
     "ws": "^8.19.0"
