--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
         run: npx tsc -p tsconfig.json
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
           path: |
@@ -44,7 +44,7 @@ jobs:
             frontend/dist
             backend/dist
 
-  release:
+  release-windows:
     name: Publish Release
     runs-on: windows-latest
     needs: install-and-build
@@ -56,7 +56,7 @@ jobs:
           fetch-depth: 0 # Important for git merge operations later
 
       - name: Download Build Artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: build-artifacts
 
