--- a/.versionrc.json
+++ b/.versionrc.json
@@ -7,9 +7,9 @@
     { "type": "style", "section": "Code Style", "hidden": true },
     { "type": "refactor", "section": "Code Refactoring", "hidden": false },
     { "type": "perf", "section": "Performance Improvements", "hidden": false },
-    { "type": "test", "section": "Tests", "hidden": true },
-    { "type": "build", "section": "Build System", "hidden": true },
-    { "type": "ci", "section": "CI/CD", "hidden": true }
+    { "type": "test", "section": "Tests", "hidden": false },
+    { "type": "build", "section": "Build System", "hidden": false },
+    { "type": "ci", "section": "CI/CD", "hidden": false }
   ],
   "bumpFiles": [
     {
@@ -30,8 +30,5 @@
       "filename": "package.json",
       "type": "json"
     }
-  ],
-  "skip": {
-    "tag": true
-  }
+  ]
 }
