--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "electron": "npm run build && tsc -p tsconfig.json && electron .",
     "clean": "rimraf dist release",
     "build": "npm run build:frontend && npm run build:backend && tsc -p tsconfig.json",
-    "package": "npm run build && electron-builder",
+    "package": "electron-builder",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
     "release": "standard-version",
