--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           name: build-artifacts
           path: |
-            electron/dist/
+            electron/dist
             frontend/dist
             backend/dist
 
@@ -73,8 +73,10 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: npm
 
-      - name: Install root dependencies
-        run: npm ci
+      - name: Install dependencies
+        run: |
+          npm ci
+          cd electron && npm ci
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
