--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "lumiov",
+  "name": "lumiov-root",
   "version": "2.11.2",
   "description": "Lumiov Kubernetes Manager",
-  "main": "electron/dist/electron/main.js",
-  "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm start",
     "dev:backend": "cd backend && npm run dev",
-    "dev:electron": "wait-on http://localhost:3000 && tsc -p tsconfig.json && electron .",
-    "electron": "npm run build && tsc -p tsconfig.json && electron .",
-    "clean": "rimraf dist release",
+    "dev:electron": "tsc -p tsconfig.json && electron ./electron",
+    "electron": "npm run build && tsc -p tsconfig.json && electron ./electron",
+    "clean": "rimraf electron/dist electron/release",
     "build": "npm run build:frontend && npm run build:backend && tsc -p tsconfig.json",
-    "package": "electron-builder",
+    "package": "cd electron && npx electron-builder",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
     "release": "standard-version",
@@ -20,70 +18,7 @@
     "prepare": "husky install",
     "commitlint": "commitlint --edit"
   },
-  "build": {
-    "appId": "com.lumiov.app",
-    "productName": "Lumiov",
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "mtayabnoor",
-        "repo": "lumiov-releases",
-        "releaseType": "release"
-      },
-      {
-        "provider": "github",
-        "owner": "mtayabnoor",
-        "repo": "lumiov",
-        "releaseType": "release"
-      }
-    ],
-    "win": {
-      "target": [
-        "nsis"
-      ],
-      "icon": "frontend/public/lumiov.ico",
-      "cscLink": "lumiov_dev.pfx"
-    },
-    "nsis": {
-      "oneClick": false,
-      "perMachine": false,
-      "allowToChangeInstallationDirectory": true,
-      "deleteAppDataOnUninstall": true
-    },
-    "files": [
-      "electron/dist/electron/**/*",
-      "frontend/dist/**/*",
-      "package.json"
-    ],
-    "extraResources": [
-      {
-        "from": "backend/dist",
-        "to": "backend"
-      },
-      {
-        "from": "frontend/public/lumiov.ico",
-        "to": "lumiov.ico"
-      }
-    ],
-    "directories": {
-      "output": "release"
-    }
-  },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@types/node": "25.2.0",
-    "concurrently": "^8.2.0",
-    "electron": "40.1.0",
-    "electron-builder": "26.7.0",
-    "husky": "^9.0.0",
-    "rimraf": "^5.0.0",
-    "standard-version": "^9.5.0",
-    "typescript": "^5.3.0",
-    "wait-on": "^7.2.0"
-  },
-  "dependencies": {
-    "electron-updater": "^6.1.7",
-    "ws": "8.19.0"
+    "concurrently": "^8.2.0"
   }
 }
