--- a/.versionrc.json
+++ b/.versionrc.json
@@ -13,7 +13,7 @@
   ],
   "bumpFiles": [
     {
-      "filename": "package.json",
+      "filename": "electron/package.json",
       "type": "json"
     },
     {
@@ -23,11 +23,15 @@
     {
       "filename": "backend/package.json",
       "type": "json"
+    },
+    {
+      "filename": "package.json",
+      "type": "json"
     }
   ],
   "packageFiles": [
     {
-      "filename": "package.json",
+      "filename": "electron/package.json",
       "type": "json"
     }
   ]
