--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "lumiov-root",
   "version": "2.11.2",
   "description": "Lumiov Kubernetes Manager",
+  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm start",
@@ -19,6 +21,14 @@
     "commitlint": "commitlint --edit"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@types/node": "25.2.0",
+    "concurrently": "^8.2.0",
+    "electron": "40.1.0",
+    "husky": "^9.0.0",
+    "rimraf": "^5.0.0",
+    "standard-version": "^9.5.0",
+    "typescript": "^5.3.0"
   }
 }
