--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - "website/**"
+      - ".github/workflows/deploy-website.yml"
 
 concurrency:
   group: release
@@ -95,7 +98,7 @@ jobs:
           # Run standard-version to bump version and generate changelog
           npm run release
 
-          $version = (Get-Content package.json | ConvertFrom-Json).version
+          $version = (Get-Content electron/package.json | ConvertFrom-Json).version
           echo "new_version=$version" >> $env:GITHUB_OUTPUT
           echo "tag=v$version" >> $env:GITHUB_OUTPUT
           echo "🏷️ Release version: v$version"
@@ -105,7 +108,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           WIN_CSC_LINK: ${{ secrets.WIN_CSC_LINK }}
           WIN_CSC_KEY_PASSWORD: ${{ secrets.WIN_CSC_KEY_PASSWORD }}
-        run: npm run package -- --publish always
+        run: cd electron && npm run package:publish
 
       - name: Push release commit and tag
         run: git push origin main --follow-tags
