--- a/electron/package.json
+++ b/electron/package.json
@@ -2,15 +2,12 @@
   "name": "lumiov",
   "version": "2.11.2",
   "description": "Lumiov Kubernetes Manager",
+  "author": "mtayabnoor",
   "main": "dist/electron/main.js",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "electron": "npm run build && tsc -p tsconfig.json && electron .",
-    "clean": "rimraf dist release",
-    "build": "npm run build:frontend && npm run build:backend && tsc -p tsconfig.json",
-    "build:frontend": "cd ../frontend && npm run build",
-    "build:backend": "cd ../backend && npm run build"
+    "package": "electron-builder",
+    "package:publish": "electron-builder --publish always"
   },
   "build": {
     "appId": "com.lumiov.app",
@@ -65,17 +62,10 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
     "@types/node": "25.2.0",
-    "concurrently": "^8.2.0",
     "electron": "40.1.0",
     "electron-builder": "26.7.0",
-    "husky": "^9.0.0",
-    "rimraf": "^5.0.0",
-    "standard-version": "^9.5.0",
-    "typescript": "^5.3.0",
-    "wait-on": "^7.2.0"
+    "typescript": "^5.3.0"
   },
   "dependencies": {
     "electron-updater": "^6.1.7",
