--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "lib": ["ESNext", "DOM"],
-    "outDir": "./electron/dist/electron",
-    "rootDir": "./electron",
+    "outDir": "./dist/electron",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -14,6 +14,6 @@
     "resolveJsonModule": true,
     "types": ["node", "electron"]
   },
-  "include": ["electron/**/*"],
+  "include": ["**/*"],
   "exclude": ["node_modules", "frontend", "backend", "dist", "release"]
 }
