--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm start",
     "dev:backend": "cd backend && npm run dev",
-    "dev:electron": "tsc -p tsconfig.json && electron ./electron",
-    "electron": "npm run build && tsc -p tsconfig.json && electron ./electron",
-    "clean": "rimraf electron/dist electron/release",
-    "build": "npm run build:frontend && npm run build:backend && tsc -p tsconfig.json",
-    "package": "cd electron && npx electron-builder",
+    "dev:electron": "cd electron && tsc -p tsconfig.json && electron .",
+    "build": "npm run build:frontend && npm run build:backend && npm run build:electron",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
+    "build:electron": "cd electron && tsc -p tsconfig.json",
+    "electron": "npm run build && electron electron/.",
+    "package": "npm run build && cd electron && npx electron-builder",
+    "clean": "rimraf electron/dist electron/release",
     "release": "standard-version",
     "release:dry-run": "standard-version --dry-run",
     "prepare": "husky install",
@@ -23,12 +24,9 @@
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
-    "@types/node": "25.2.0",
     "concurrently": "^8.2.0",
-    "electron": "40.1.0",
     "husky": "^9.0.0",
     "rimraf": "^5.0.0",
-    "standard-version": "^9.5.0",
-    "typescript": "^5.3.0"
+    "standard-version": "^9.5.0"
   }
 }
