--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm run build:backend
 
       - name: Build Electron
-        run: npx tsc -p tsconfig.json
+        run: npm run build:electron
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
