fix: Electron types

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -12,7 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
     "resolveJsonModule": true,
-    "types": ["node", "electron"]
+    "types": ["node"]
   },
   "include": ["**/*"],
   "exclude": ["node_modules", "frontend", "backend", "dist", "release"]
