--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package: [root, frontend, backend]
+        package: [root, frontend, backend, electron]
         include:
           - package: root
             working-directory: .
@@ -46,6 +46,8 @@ jobs:
             working-directory: frontend
           - package: backend
             working-directory: backend
+          - package: electron
+            working-directory: electron
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -66,13 +68,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package: [frontend, backend]
+        package: [frontend, backend, electron]
         include:
           - package: frontend
             working-directory: frontend
             command: npm run build
           - package: backend
             working-directory: backend
+            command: npm run type-check
+          - package: electron
+            working-directory: electron
             command: npm run type-check
     steps:
       - uses: actions/checkout@v4
@@ -102,12 +107,13 @@ jobs:
           npm ci
           cd frontend && npm ci
           cd ../backend && npm ci
+          cd ../electron && npm ci
       - name: Build frontend
         run: npm run build:frontend
       - name: Build backend
         run: npm run build:backend
       - name: Build Electron
-        run: npx tsc -p tsconfig.json
+        run: npm run build:electron
 
   # ─── Security Audit ────────────────────────────────────────────
   security:
@@ -116,7 +122,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package: [root, frontend, backend]
+        package: [root, frontend, backend, electron]
         include:
           - package: root
             working-directory: .
@@ -124,6 +130,8 @@ jobs:
             working-directory: frontend
           - package: backend
             working-directory: backend
+          - package: electron
+            working-directory: electron
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
