--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
           npm ci
           cd frontend && npm ci
           cd ../backend && npm ci
+          cd ../electron && npm ci
 
       - name: Build frontend
         run: npm run build:frontend
